# clas12-mcgen

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  env.sh  env.zsh  generate-seeds.py  modulefile  requirements.sh  requirements.zsh  versions.json  versions.txt
.github/: get_highest_tag.rb  index.html  load-modules.csh
.github/workflows/: ci.yml  doc.yml
GiBUU/: .gitignore  FindROOT.cmake  Makefile  README.md  gibuu.py  gibuu2lund.cxx  gibuu_template.opt
doc/: maintenance.md
genie/: .gitignore  Makefile  README.md  build-deps.sh  build-genie.sh  build-root.sh  env.sh  genie.py  genie2lund.cxx
genie-util/: .gitignore  Makefile  README-old.md  README.md  genie  genie2lund.cxx
gibuu/: .gitignore  Makefile  NuclearPDF.f90.patch  README.md  eks98_dummy.f90  gibuu  gibuu2lund.cxx
gibuu/patches/: cmake_v4.patch  eks98.patch  input.patch  root.patch
lhapdf/: build
root/: Makefile
test/: Makefile
